2001-02-21 01:45 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Changed all extensions to lower case (.prg, .pp$, .cch ).
     * Changed Chr(13) + Chr(10) to CRLF which is #defined as HB_OsNewLine() if __HARBOUR__ is defined.
     * Changed literal size of buffer 16384 to PP_BUFFER_SIZE which is #defined as 16384

     /* Could Linux users please report results... */

2001-02-20 22:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
    * utils/hbpp/hbpp.c
      - Removed unused variables and function warnned by djgpp

2001-02-20 22:00 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * make_gnu.bat
     ! Fixed maker to make -r
     * Added %HARBOURDIR% and removed trailing slash from HB_BIN_INSTALL, HB_LIB_INSTALL and HB_INC_INSTALL

   * contrib/dot/pp.prg
     * Minor corrections to stringifys

   * utils/hbtest/hbtest.prg
     * Commented out RddSetDefault( "DBFCDX" )

2001-02-20 13:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/include/hbver.h
     * Changed release info to 0.36, etc.
   * harbour/source/rdd/rddsys.prg
     * Default RDD changed to DBFNTX

2001-02-20 01:50 GMT-3 Horacio Roldan <horacioroldan@usa.net>
   * harbour/source/vm/asort.c
     * Fixed bug in optimization test that prevented sorting some arrays.

2001-02-19 11:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/include/hbrddntx.h
     * Forgot to upload last time

2001-02-19 10:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * fixes and improvements

2001-02-17 16:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
      *Fixed an small bug regarding the number of select files on editor mode

2001-02-16 23:40 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * source/rtl/tget.prg
      * added Updating of Buffer to UpdateBuffer
      * added 0+Value to avoid changing the display lengths of numerics
   * contrib/rdd_ads/ads1.c