@@ -1,3 +1,12 @@
+2001-02-22 10:25 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * harbour/source/rdd/dbfntx/dbfntx1.c
+     * few bugs fixed, reported by Robert Haley
+   * harbour/tests/Makefile
+     * readfile.prg moved to BAD SOURCES, because it doesn't compiled under Linux,
+     * testntx.prg added
+   * harbour/tests/testntx.prg
+     * minor fixes
+
 2001-02-21 01:45 UTC-0800 Ron Pinkas <ron@profit-master.com>
    * contrib/dot/pp.prg
      * Changed all extensions to lower case (.prg, .pp$, .cch ).
